fix 100vh issue on mobile

--- a/components/common/layout/layout.module.scss
+++ b/components/common/layout/layout.module.scss
@@ -1,3 +1,4 @@
 .root {
-  min-height: calc(100% - 64px);
+  min-height: 100%;
+  height: 100%;
 }
