--- a/pages/styles/contact.module.scss
+++ b/pages/styles/contact.module.scss
@@ -1,7 +1,7 @@
 @use '../../styles/mixins';
 
 .contact {
-  min-height: 80vh;
+  height: 100%;
   display: grid;
   align-items: center;
 }
